--- a/views/claim.jade
+++ b/views/claim.jade
@@ -2,9 +2,9 @@ extends layout
 
 block content
   .col-md-12
-   h4 #{settings.locale.ex_claim_id} #{claim.claimId}
-   h4 #{settings.locale.ex_name} #{name}
-   h4 #{settings.locale.tx_hash}: 
+   h4 #{settings.locale.ex_claim_id}: #{claim.claimId}
+   h4 #{settings.locale.ex_name}: #{name}
+   h4 #{settings.locale.tx_hash}:
      a(href='/tx/#{claim.txid}') #{claim.txid}
    - var amount = claim.nAmount / 100000000
    h4 #{settings.locale.mkt_amount} (#{settings.symbol}): #{amount.toFixed(8)}
