--- a/views/claim.jade
+++ b/views/claim.jade
@@ -52,5 +52,5 @@ block content
                   - var total = s.nAmount / 100000000
                   td #{total.toFixed(8)}
       - var amount = claim.nEffectiveAmount / 100000000
-      h4 #{settings.locale.ex_total_with_supports} (#{settings.symbol}): #{amount.toFixed(8)}
+      h4 #{settings.locale.ex_total_with_supports}: #{amount.toFixed(8)}
     .footer-padding
